# rust-download-manager

./: Cargo.toml  Makefile  README.md  build.sh  package-lock.json
.github/workflows/: rust.yml
extension/: Makefile  background.js  background.js~  manifest.json  manifest.json~  package.json  tsconfig.json
extension/src/: background.ts  manifest.json
extension/src/content/: ContentApp.tsx  scripts.ts  scripts.tsx
extension/src/sidebar/: SidebarApp.tsx  index.html  styles.css
src/: downloading.rs  interaction.rs  main.rs  monitor.rs  rendering.rs
