[package]
name = "karbox_downloader"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
    
[dependencies]
clipboard = "0.5.0"
crossterm = "0.27.0"
directories = "5.0.1"
futures = "0.3.30"
futures-util = "0.3.30"
indicatif = "0.17.7"
is-url = "1.0.4"
reqwest = {version = "0.11.23", features = ["blocking"]}
tokio = {version = "1.35.1", features = ["full"]}
tokio-tungstenite = "0.21.0"
websocket = "0.27.0"
